--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -9,32 +9,38 @@
         <div class="row">
             <!--Grid column-->
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Footer Content</h5>
-    
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                voluptatem veniam, est atque cumque eum delectus sint!
-            </p>
+                <h5 class="text-uppercase">VISION</h5>
+                <p>
+                    An Africa built with pride
+                </p>
+                <h5 class="text-uppercase">MISSION</h5>
+                <p>
+                    We deliver trusted building solutions that 
+                    are made with Pride and care to provide superior customer value.
+                </p>
             </div>
+            
             <!--Grid column-->
     
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
+            <h5 class="text-uppercase">OUR VALUES</h5>
     
             <ul class="list-unstyled mb-0">
                 <li>
-                <a href="#!" class="text-dark">Link 1</a>
+                    Customer First
                 </li>
                 <li>
-                <a href="#!" class="text-dark">Link 2</a>
+                    Excellence
                 </li>
                 <li>
-                <a href="#!" class="text-dark">Link 3</a>
+                    Partnerships
                 </li>
                 <li>
-                <a href="#!" class="text-dark">Link 4</a>
+                    Integrity
+                </li>
+                <li>
+                    Care
                 </li>
             </ul>
             </div>
@@ -42,20 +48,38 @@
     
             <!--Grid column-->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase mb-0">Links</h5>
+            <h5 class="text-uppercase mb-0">FOLLOW US</h5>
     
             <ul class="list-unstyled">
-                <li>
-                <a href="#!" class="text-dark">Link 1</a>
+                <li class="footer-top__social-item">
+                    <a href="https://www.facebook.com/UgandaBaatiLtd/" 
+                        class="footer-top__social-link">
+                        <i class="fa fa-facebook-f"></i>
+                    </a>
                 </li>
-                <li>
-                <a href="#!" class="text-dark">Link 2</a>
+                <li class="footer-top__social-item">
+                    <a href="https://twitter.com/UgandaBaati" 
+                        class="footer-top__social-link">
+                        <i class="fa fa-twitter"></i> 
+                    </a>
                 </li>
-                <li>
-                <a href="#!" class="text-dark">Link 3</a>
+                <li class="footer-top__social-item">
+                    <a href="https://www.instagram.com/ugandabaati_official/" 
+                        class="footer-top__social-link">
+                        <i class="fa fa-instagram"></i> 
+                    </a>
                 </li>
-                <li>
-                <a href="#!" class="text-dark">Link 4</a>
+                <li class="footer-top__social-item">
+                    <a href="https://www.linkedin.com/company/uganda-baati-ltd-/" 
+                        class="footer-top__social-link">
+                        <i class="fa fa-linkedin"></i> 
+                    </a>
+                </li>
+                <li class="footer-top__social-item">
+                    <a href="https://www.youtube.com/channel/UCdDt3BabO9uZuvAbMZ4yJxQ" 
+                        class="footer-top__social-link">
+                        <i class="fa fa-youtube-play"></i> 
+                    </a>
                 </li>
             </ul>
             </div>
